@@ -57,6 +57,9 @@
   border-top-right-radius: 2px;
   overflow: hidden;
 }
+.kwrapper *, .kfatalwrapper-outer * {
+  all: revert-layer;
+}
 .kwrapper div, .kwrapper span, .kwrapper em, .kwrapper ul, .kwrapper li, .kwrapper a, .kwrapper input, .kwrapper table, .kwrapper caption, .kwrapper tbody, .kwrapper tr, .kwrapper td, .kwrapper strong, .kwrapper hr, .kwrapper select, .kwrapper option, .kwrapper label, .kfatalwrapper-outer div, .kfatalwrapper-outer span, .kfatalwrapper-outer em, .kfatalwrapper-outer ul, .kfatalwrapper-outer li, .kfatalwrapper-outer a, .kfatalwrapper-outer input, .kfatalwrapper-outer table, .kfatalwrapper-outer caption, .kfatalwrapper-outer tbody, .kfatalwrapper-outer tr, .kfatalwrapper-outer td, .kfatalwrapper-outer strong, .kfatalwrapper-outer hr, .kfatalwrapper-outer select, .kfatalwrapper-outer option, .kfatalwrapper-outer label {
   padding: 0;
   margin: 0;
@@ -294,7 +297,7 @@
   font: bold 12px tahoma, verdana;
 }
 .kwrapper .kmessage::before, .kfatalwrapper-outer .kmessage::before {
-  content: "\00a0\00a0!\00a0\00a0";
+  content: "\\00a0\\00a0!\\00a0\\00a0";
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
   background-color: #FED300;
   border: 1px solid #555555;
@@ -351,7 +354,7 @@
 .kwrapper .kchild .kname.keystring::before,
 .kwrapper .kchild .kname.keystring::after, .kfatalwrapper-outer .kchild .kname.keystring::before,
 .kfatalwrapper-outer .kchild .kname.keystring::after {
-  content: "\27";
+  content: "\\27";
   background: transparent;
 }
 .kwrapper .kchild .kel, .kfatalwrapper-outer .kchild .kel {
@@ -411,7 +414,7 @@
   padding-left: 2px;
 }
 .kwrapper .kchild .kel.kexpand::before, .kfatalwrapper-outer .kchild .kel.kexpand::before {
-  content: "\00a0\25B6\00a0\00a0";
+  content: "\\00a0\\25B6\\00a0\\00a0";
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
 .kwrapper .kchild .kel.kexpand .kel-bg, .kfatalwrapper-outer .kchild .kel.kexpand .kel-bg {
@@ -421,7 +424,7 @@
   background-image: none;
 }
 .kwrapper .kchild .kel.kopened::before, .kfatalwrapper-outer .kchild .kel.kopened::before {
-  content: "\00a0\25BC\00a0\00a0";
+  content: "\\00a0\\25BC\\00a0\\00a0";
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
 .kwrapper .kchild .kel:not(.kexpand), .kfatalwrapper-outer .kchild .kel:not(.kexpand) {
@@ -431,7 +434,7 @@
   /* grey line */
   width: 3px;
   background: #919191 none repeat scroll 0 0;
-  content: "\00a0";
+  content: "\\00a0";
   margin-left: 5px;
   display: inline-block;
   margin-right: 13px;
@@ -527,7 +530,7 @@
   cursor: pointer;
 }
 .kwrapper .kchild .kolps::before, .kfatalwrapper-outer .kchild .kolps::before {
-  content: "\21D4";
+  content: "\\21D4";
   font-weight: bolder;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
@@ -538,7 +541,7 @@
   color: #FED300;
 }
 .kwrapper .kchild .kolps.kcollapsed::before, .kfatalwrapper-outer .kchild .kolps.kcollapsed::before {
-  content: "\21D5";
+  content: "\\21D5";
   font-weight: bolder;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
@@ -588,7 +591,7 @@
 .kwrapper .kchild .kstring .kshort::before,
 .kwrapper .kchild .kstring .kshort::after, .kfatalwrapper-outer .kchild .kstring .kshort::before,
 .kfatalwrapper-outer .kchild .kstring .kshort::after {
-  content: "\27";
+  content: "\\27";
 }
 .kwrapper .kchild .kclass::before, .kfatalwrapper-outer .kchild .kclass::before {
   color: #00AD00;
@@ -731,7 +734,7 @@
   color: #ffffff;
 }
 .kwrapper .kclose.knormal::before, .kfatalwrapper-outer .kclose.knormal::before {
-  content: "\2715";
+  content: "\\2715";
 }
 .kwrapper .kclose.knormal:hover, .kfatalwrapper-outer .kclose.knormal:hover {
   color: #B2B2B2;
@@ -791,7 +794,7 @@
   cursor: pointer;
 }
 .kwrapper .search-wrapper .ksearch .koptions::before, .kfatalwrapper-outer .search-wrapper .ksearch .koptions::before {
-  content: "\263C";
+  content: "\\263C";
   font-weight: bolder;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
