@@ -96,6 +96,9 @@ $fontLight: lighter 10px tahoma, verdana;
 }
 
 .kwrapper, .kfatalwrapper-outer {
+  * {
+    all: revert-layer;
+  }
 
   // We need to secure some initial formating for our elements, to prevent the
   // host-system from making them unusable with css formatting.
